Apply a bunch of IDE suggestions